[package]
name = "eth-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.20" }
ethereum-types = { version = "0.14.1", default-features = false, features = ["std", "rlp"] }
secp256k1 = { version = "0.27.0", features = ["global-context", "recovery", "rand"] }
rand = { version = "0.8.5" }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-stream = { version = "0.1.14" }