[package]
name = "eth-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
thiserror = { version = "1.0.41" }
bytes = { version = "1.4.0" }
ethereum-types = { version = "0.14.1", default-features = false, features = ["std", "rlp"] }
secp256k1 = { version = "0.27.0", features = ["global-context", "recovery", "rand"] }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.5" }
aes = { version = "0.8.1" }
ctr = { version = "0.9.2" }
rlp = { version = "0.5.2" }
block-padding = { version = "0.3.2" }
cipher = { version = "0.4.3", features = ["block-padding"] }
digest = { version ="0.10.5" }
hmac = { version = "0.12.1" }
generic-array = { version = "0.14.7" }
typenum = { version = "1.15.0"}
byteorder = { version = "1.4.3" }
rand = { version = "0.8.5" }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-stream = { version = "0.1.14" }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = { version = "0.3.28" }
hex = { version = "0.4.3" }
clap = { version = "4.3.10", features = ["derive"] }